# mathclaw

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_zh.md  LICENSE  README.md  README_EN.md  README_zh.md  ROADMAP.md  SECURITY.md  doc.md  install.sh  pyproject.toml  search-index.json  site.config.json  start.sh
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature_request.md  3-documentation.md  4-question.md  5-support_environment.md  config.yml
.github/workflows/: deploy-website.yml  docker-release.yml  npm-format.yml  pre-commit.yml  publish-pypi.yml
.mathclaw/: HEARTBEAT.md  MEMORY.md  PROFILE.md  SOUL.md  chats.json  config.json.bak-20260318050736  config.json.bak-heartbeat-20260318180455  heartbeat.json
.mathclaw/exam_bank/: 2025年新课标i卷的数学试卷-pdf-resource-smoke-1773405218.json  2025广州市初中中考数学卷-试卷-pdf-wecom:single:QianZhe-1773407581.json  一下高中导数入门资料-数学-debug-heartbeat-fix-sear-1773830729.json  一下高中导数入门资料-数学-debug-heartbeat-fix-sear-1773830754.json  一些适合高一函数入门的教学视频-数学-resource-smoke-1773405261.json  几本适合高二导数的教辅-数学-pdf-resource-smoke-1773405275.json  几本适合高二导数的教辅-数学-resource-smoke-1773405781.json  几本适合高二导数的教辅-数学-wecom:single:QianZhe-1773406120.json  出2024年广东省新课标i卷的数学卷-试卷-pdf-wecom:single:QianZhe-1773406209.json  直接调用-run-math-solve-verify-agent-处理题目-解方程-x-2-5x-6-0-若工具返回通过-只回复最终答案和状态-pdf-solve-verify-smoke-1773462931.json  索一下高中函数相关的视频给我-数学-wecom:single:QianZhe-1773645485.json  索一下高中导数相关的视频给我-数学-wecom:single:QianZhe-1773789602.json  索高中恒等式相关的视频-数学-wecom:single:QianZhe-1773831416.json
.researchclaw/: AGENTS.md  HEARTBEAT.md  MEMORY.md  PROFILE.md  chats.json  jobs.json
.runtime/: mathclaw6006.pid  mathclaw_utf8_test.txt  utf8_probe.txt  utf8_test.txt
assets/: _basePickBy-25sf8xcQ.js  _basePickBy-B7rLZxjN.js  _baseUniq-B-rKtAdq.js  _baseUniq-BArYLS24.js  arc-BwK8hghA.js  arc-Dka1vYpK.js  architectureDiagram-VXUJARFQ-D3eN_wq2.js  architectureDiagram-VXUJARFQ-DeI8LXwV.js  blockDiagram-VD42YOAC-BYDX7b42.js  blockDiagram-VD42YOAC-DE_ykpA4.js  c4Diagram-YG6GDRKO-BmhEIFQF.js  c4Diagram-YG6GDRKO-Cc4jEyS6.js  channel-BjMZADXk.js  channel-Bvh2AxsF.js  chunk-4BX2VUAB-CoOLJRWp.js  chunk-4BX2VUAB-RX1ED5Zx.js  chunk-55IACEB6-DQCBQArk.js  chunk-55IACEB6-Gb3K7NVf.js  chunk-B4BG7PRW-DlUsD2lz.js  chunk-B4BG7PRW-YBSQ5cX6.js  chunk-DI55MBZ5-2SGqdYt_.js  chunk-DI55MBZ5-BX9qhStP.js  chunk-FMBD7UC4-DznZVuRT.js  chunk-FMBD7UC4-tKL0D5DP.js  chunk-QN33PNHL-CHJ66QpT.js  chunk-QN33PNHL-DcSrNXzX.js  chunk-QZHKN3VN-Cu36b14J.js  chunk-QZHKN3VN-DvhUtq13.js  chunk-TZMSLE5B-CM5D0RXP.js  chunk-TZMSLE5B-Dmo1F3oQ.js  classDiagram-2ON5EDUG-CskJraFi.js  classDiagram-2ON5EDUG-ZR0DWQeu.js  clone-B4m8Kyk1.js  clone-NwBnNHg-.js  cose-bilkent-S5V4N54A-BQDRUQFZ.js  cose-bilkent-S5V4N54A-Bxd7vNF3.js  dagre-6UL2VRFP-BWdCBFSG.js  dagre-6UL2VRFP-CsMgjdgZ.js  diagram-PSM6KHXK-BMk0Z3-5.js  diagram-PSM6KHXK-C83cLgL0.js  (+50 more)
console/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
console/src/: App.tsx  api.ts  (+5 more)
deploy/: Dockerfile  entrypoint.sh
docs/: channels.en.md  channels.zh.md  cli.zh.md  commands.en.md  commands.zh.md  community.en.md  compact.zh.md  config.en.md  console.zh.md  contributing.zh.md  faq.en.md  heartbeat.en.md  intro.zh.md  mcp.en.md  memory.en.md  quickstart.en.md  quickstart.zh.md  skills.en.md
scripts/: docker_build.sh  start_mathclaw6006.py  start_researchclaw6006.py  wheel_build.sh
tests/: test_bootstrap_hook.py  test_browser_use_compat.py  test_channel_connectors.py  test_command_skills_debug.py  test_copaw_tool_aliases.py  test_daemon_commands.py  test_env_store.py  test_exam_pipeline_streaming.py  test_global_learning_memory.py  test_guided_explanation_q3vl.py  test_guided_explanation_routing.py  test_heartbeat.py  test_math_tools.py  test_mathclaw_tools_rate_limit.py  test_ocr_q3vl.py  test_provider_store.py  test_react_agent_tool_registration.py  test_research_tools_rate_limit.py  test_resource_lookup.py  test_runner_chat_stream_timeout.py  test_skill_compat.py  test_skill_compat_math.py  test_skill_creator_service.py  test_skills_manager_frontmatter.py  test_solve_verify_q3vl.py  test_solve_verify_routing.py  test_turn_trace_debug.py  test_variant_generation_q3vl.py  test_variant_generation_routing.py  test_weakness_diag_q3vl.py  test_weakness_diag_routing.py
website/: README.md  index.html  package.json  pnpm-lock.yaml
(+1597 files in other folders)
